# NewScarlet

./: .gitignore  DEVNOTES.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.memvid/: agent-memory.mv2
cortex/: Dockerfile  requirements.txt
cortex/config/: settings.py
cortex/docs/: README.md
cortex/src/: __init__.py  internal_router.py  llm_client.py  loop.py  main.py  state.py
cortex/tests/: __init__.py  conftest.py  test_cortex.py  test_integration.py  test_llm.py
docs/: ARCHITECTURE.md  COMPONENTS.md  DEVELOPMENT_GUIDELINES.md  ROADMAP.md
executive_arms/: Dockerfile
executive_arms/config/: settings.py
executive_arms/docs/: README.md
executive_arms/src/: __init__.py  main.py
executive_arms/tests/: __init__.py
gateway/: Dockerfile  requirements.txt
gateway/config/: settings.py
gateway/docs/: README.md
gateway/src/: __init__.py  main.py  router.py
gateway/tests/: __init__.py  conftest.py  test_gateway.py  test_integration.py
memory/: Dockerfile  requirements.txt
memory/config/: settings.py
memory/docs/: README.md
memory/src/: __init__.py  crud.py  database.py  main.py  router.py
memory/tests/: __init__.py  conftest.py  test_memory.py
reflection/: Dockerfile
scarlet-common/: pyproject.toml
scarlet-common/docs/: README.md
scarlet-common/scarlet_common/: __init__.py  logging.py
scarlet-common/scarlet_common/models/: __init__.py  agent.py  conversation.py  responses.py  tasks.py
scarlet-common/tests/: __init__.py  test_models.py
volition/: Dockerfile  requirements.txt
(+10 files in other folders)
