[project]
name = "scarlet"
version = "0.1.0"
description = "Scarlet — Sistema AI Autonomo Avanzato"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = [
    "cortex/tests",
    "gateway/tests",
    "memory/tests",
    "volition/tests",
    "reflection/tests",
    "executive_arms/tests",
    "scarlet-common/tests",
]
asyncio_mode = "auto"
addopts = "--tb=short -q --import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["scarlet_common"]
